--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,4 +26,4 @@ jobs:
         run: python -m pip install flake8
 
       - name: Run flake8
-        run: flake8 . --max-line-length=88
+        run: flake8 .
