--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Build test image
         run: |
-          docker build -f ./test.Dockerfile -t ricardo_test_container .
+          docker build -f ./Library-Manager/test.Dockerfile -t ricardo_test_container ./Library-Manager
 
       - name: Run tests inside container
         run: |
@@ -34,7 +34,8 @@ jobs:
 
       - name: build and push to docker hub
         run: |
-          docker build -t happystar91/advanced-web-final-kubernetes:${{github.run_number}} .
+          # Build from Library-Manager directory where the project's Dockerfile(s) reside
+          docker build -t happystar91/advanced-web-final-kubernetes:${{github.run_number}} ./Library-Manager
           docker push happystar91/advanced-web-final-kubernetes:${{github.run_number}}
 
       - name: deploy to kubernetes
