--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,31 +40,11 @@ jobs:
       - name: deploy to kubernetes
         shell: pwsh
         run: |
+          # Use PowerShell for Windows self-hosted runner
           $env:BUILD_NUMBER = "${{ github.run_number }}"
 
-          $workspace = $env:GITHUB_WORKSPACE
-          Write-Host "GITHUB_WORKSPACE=${workspace}"
-          $candidates = @(
-            Join-Path $workspace 'kube',
-            Join-Path $workspace 'Library-Manager\kube',
-            Join-Path (Get-Location) 'kube'
-          )
-
-          $kubePath = $null
-          foreach ($cand in $candidates) {
-            if (Test-Path $cand) { $kubePath = $cand; break }
-          }
-
-          Write-Host "Attempting to use kube path: $kubePath"
-          if (-not $kubePath) {
-            Write-Host "ERROR: kube directory not found in any of the candidate locations:"; $candidates | ForEach-Object { Write-Host "  $_" }
-            Write-Host "Listing current directory:"; Get-ChildItem -Force | ForEach-Object { Write-Host "  $_" }
-            throw "kube directory not found. Aborting deploy step."
-          }
-
-          Write-Host "Listing kube directory contents:"; Get-ChildItem -Path $kubePath -File | ForEach-Object { Write-Host $_.FullName }
-
-          Get-ChildItem -Path $kubePath -File | ForEach-Object {
+          # For each file in the kube directory, replace ${BUILD_NUMBER} with the build number and apply
+          Get-ChildItem -Path kube -File | ForEach-Object {
             $content = Get-Content -Raw $_.FullName
             $content = $content -replace '\$\{BUILD_NUMBER\}', $env:BUILD_NUMBER
             $content | kubectl apply -f -
