--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,14 +38,10 @@ jobs:
           docker push happystar91/advanced-web-final-kubernetes:${{github.run_number}}
 
       - name: deploy to kubernetes
-        shell: pwsh
         run: |
-          # Use PowerShell for Windows self-hosted runner
-          $env:BUILD_NUMBER = "${{ github.run_number }}"
+          export BUILD_NUMBER=${{github.run_number}}
 
-          # For each file in the kube directory, replace ${BUILD_NUMBER} with the build number and apply
-          Get-ChildItem -Path kube -File | ForEach-Object {
-            $content = Get-Content -Raw $_.FullName
-            $content = $content -replace '\$\{BUILD_NUMBER\}', $env:BUILD_NUMBER
-            $content | kubectl apply -f -
-          }
+          for FILE in "kube"/*
+          do
+            cat "$FILE" | envsubst | kubectl apply -f -
+          done
