--- a/kube/advanceweb-dep.yml
+++ b/kube/advanceweb-dep.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: happystar91/advancedweb-Final-kubernetes:$BUILD_NUMBER
+        image: happystar91/advanced-web-final-kubernetes:${BUILD_NUMBER}
         ports:
         - containerPort: 8080
         env:
