--- a/Library-Manager/package.json
+++ b/Library-Manager/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite --open /Home",
+    "dev:client": "vite --open /Home",
+    "dev:server": "pnpm --prefix server start",
+    "dev": "concurrently \"pnpm run dev:server\" \"pnpm run dev:client\"",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -17,7 +19,8 @@
     "react-hot-toast": "^2.6.0",
     "react-oidc-context": "^3.3.0",
     "react-router-dom": "^7.9.5",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^4.1.16",
+    "concurrently": "^8.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
