--- a/kube/advanceweb-ingress.yml
+++ b/kube/advanceweb-ingress.yml
@@ -5,7 +5,10 @@ metadata:
   namespace: ricardo-advancedweb
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      if ($request_uri ~ ^/home(/|$)(.*)) {
+        rewrite ^/home(/|$)(.*) /$2 break;
+      }
 spec:
   ingressClassName: nginx
   rules:
