Connection to Youtube and Steam apis

--- a/kube/advanceweb-ingress.yml
+++ b/kube/advanceweb-ingress.yml
@@ -9,7 +9,7 @@ spec:
   - host: advanceweb.duckdns.org
     http:
       paths:
-      - path: /home
+      - path: /Home
         pathType: Prefix
         backend:
           service:
