Connection to Youtube and Steam apis

--- a/kube/advanceweb-ingress.yml
+++ b/kube/advanceweb-ingress.yml
@@ -9,7 +9,21 @@ spec:
   - host: advanceweb.duckdns.org
     http:
       paths:
+      - path: /api
+        pathType: Prefix
+        backend:
+          service:
+            name: web-svc
+            port:
+              number: 80
       - path: /Home
+        pathType: Prefix
+        backend:
+          service:
+            name: web-svc
+            port:
+              number: 80
+      - path: /
         pathType: Prefix
         backend:
           service:
