--- a/Library-Manager/package.json
+++ b/Library-Manager/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev:client": "vite --open /Home",
+    "dev:client": "vite",
     "dev:server": "pnpm --prefix server start",
     "dev": "concurrently \"pnpm run dev:server\" \"pnpm run dev:client\"",
     "build": "tsc -b && vite build",
