--- a/kube/advanceweb-ingress.yml
+++ b/kube/advanceweb-ingress.yml
@@ -3,13 +3,14 @@ kind: Ingress
 metadata:
   name: ricardo-advanceweb-ingress
   namespace: ricardo-advancedweb
+  annotations:
+  kubernetes.io/ingress.class: nginx
 spec:
-  ingressClassName: nginx
   rules:
   - host: advanceweb.duckdns.org
     http:
       paths:
-      - path: /Home
+      - path: /
         pathType: Prefix
         backend:
           service:
