--- a/kube/server-dep.yml
+++ b/kube/server-dep.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: server
-          image: happystar91/advanced-web-final-kubernetes:latest
+          image: happystar91/advanced-web-final-kubernetes:${BUILD_NUMBER}
           ports:
             - containerPort: 3001
           envFrom:
