--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,11 +43,11 @@ jobs:
         run: npm install -g pnpm
 
       - name: Install client dependencies
-        working-directory: Incrementum.client
+        working-directory: Library-Manager
         run: pnpm install --frozen-lockfile
 
       - name: Run ESLint
-        working-directory: Incrementum.client
+        working-directory: Library-Manager
         run: pnpm run lint
 
   test:
