--- a/kube/advanceweb-ingress.yml
+++ b/kube/advanceweb-ingress.yml
@@ -17,6 +17,13 @@ spec:
               name: server-svc
               port:
                 number: 3001
+        - path: /auth
+          pathType: Prefix
+          backend:
+            service:
+              name: server-svc
+              port:
+                number: 3001
         - path: /
           pathType: Prefix
           backend:
