--- a/kube/advanceweb-ingress.yml
+++ b/kube/advanceweb-ingress.yml
@@ -5,6 +5,8 @@ metadata:
   namespace: ricardo-advancedweb
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
     - host: advanceweb.duckdns.org
@@ -24,8 +26,8 @@ spec:
               name: server-svc
               port:
                 number: 3001
-        - path: /
-          pathType: Prefix
+        - path: /(.*)
+          pathType: ImplementationSpecific
           backend:
             service:
               name: web-svc
