--- a/kube/advanceweb-ingress.yml
+++ b/kube/advanceweb-ingress.yml
@@ -5,8 +5,6 @@ metadata:
   namespace: ricardo-advancedweb
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
     - host: advanceweb.duckdns.org
@@ -26,8 +24,8 @@ spec:
               name: server-svc
               port:
                 number: 3001
-        - path: /(.*)
-          pathType: ImplementationSpecific
+        - path: /
+          pathType: Prefix
           backend:
             service:
               name: web-svc
