--- a/Library-Manager/server/package.json
+++ b/Library-Manager/server/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
+    "openai": "^4.9.0",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0"
   }
